Fixed spacing slightly.

--- a/src/app/home/page.module.css
+++ b/src/app/home/page.module.css
@@ -99,6 +99,7 @@
 .eventsContainer {
     padding: 50px auto 0px 0;
     width: 80%;
+    margin-bottom: 20px;
     overflow-x: scroll;
     display: flex;
     gap: 5%;
